fix BIOS installer to use preseed correctly

--- a/sensor-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/sensor-iso/config/includes.binary/boot/grub/grub.cfg
@@ -32,22 +32,22 @@ menuentry "Live system (fully in RAM)" {
 }
 
 menuentry "Install Hedgehog Linux (quick install)" {
-  linux /install/vmlinuz auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_multipar.cfg auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
 menuentry "Install Hedgehog Linux (encrypted quick install)" {
-  linux /install/vmlinuz auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_crypto.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_multipar_crypto.cfg auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
 menuentry "Install Hedgehog Linux (advanced configuration)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal preseed/file=/cdrom/install/preseed_minimal.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_minimal.cfg auto=true priority=high vga=normal
   initrd  /install/initrd.gz
 }
 
 menuentry "Install Hedgehog Linux (virtual machine single partition quick install)" {
-  linux /install/vmlinuz auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_vmware.cfg auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
