--- a/sensor-iso/config/includes.binary/isolinux/advanced.cfg
+++ b/sensor-iso/config/includes.binary/isolinux/advanced.cfg
@@ -1,41 +1,34 @@
 label live
 menu label ^Live system
-linux /live/vmlinuz
-initrd /live/initrd.img
-append vga=788 -- boot=live components username=sensor nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+kernel /live/vmlinuz
+append boot=live components username=sensor nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem initrd=/live/initrd.img --
 
 label liveram
 menu label ^Live system (fully in RAM)
-linux /live/vmlinuz
-initrd /live/initrd.img
-append vga=788 -- boot=live toram components username=sensor nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+kernel /live/vmlinuz
+append boot=live toram components username=sensor nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem initrd=/live/initrd.img --
 
 label install
 menu label ^Install Hedgehog Linux (quick install)
-linux /install/vmlinuz
-initrd /install/initrd.gz
-append vga=788 -- auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed.cfg
+kernel /install/vmlinuz
+append file=/preseed_multipar.cfg initrd=/install/initrd.gz auto=true priority=critical locales=en_US.UTF-8 keyboard-layouts=us --
 
-label install
+label installenc
 menu label ^Install Hedgehog Linux (encrypted quick install)
-linux /install/vmlinuz
-initrd /install/initrd.gz
-append vga=788 -- auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_crypto.cfg
+kernel /install/vmlinuz
+append file=/preseed_multipar_crypto.cfg initrd=/install/initrd.gz auto=true priority=critical locales=en_US.UTF-8 keyboard-layouts=us --
 
-label install
+label installadv
 menu label ^Install Hedgehog Linux (advanced configuration)
-linux /install/vmlinuz
-initrd /install/initrd.gz
-append vga=788 -- auto=true priority=high vga=normal preseed/file=/cdrom/install/preseed_minimal.cfg
+kernel /install/vmlinuz
+append file=/preseed_minimal.cfg initrd=/install/initrd.gz auto=true priority=high --
 
-label install
+label installvm
 menu label ^Install Hedgehog Linux (virtual machine single partition quick install)
-linux /install/vmlinuz
-initrd /install/initrd.gz
-append vga=788 -- auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
+kernel /install/vmlinuz
+append file=/preseed_vmware.cfg initrd=/install/initrd.gz auto=true priority=critical locales=en_US.UTF-8 keyboard-layouts=us --
 
 label rescue
 menu label ^Rescue system in text mode
-linux /install/vmlinuz
-initrd /install/initrd.gz
-append vga=788 -- rescue/enable=true vga=normal
+kernel /install/vmlinuz
+append rescue/enable=true initrd=/install/initrd.gz --
