--- a/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
@@ -1,3 +1,5 @@
+# Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
+
 set default=0
 set timeout=-1
 
@@ -25,22 +27,22 @@ menuentry "Live system" {
 }
 
 menuentry "Install Malcolm (quick install)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_multipar.cfg auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
 menuentry "Install Malcolm (encrypted quick install)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_crypto.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_multipar_crypto.cfg auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
 menuentry "Install Malcolm (advanced configuration)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal preseed/file=/cdrom/install/preseed_minimal.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_minimal.cfg auto=true priority=high vga=normal
   initrd  /install/initrd.gz
 }
 
 menuentry "Install Malcolm (virtual machine single partition quick install)" {
-  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
+  linux /install/vmlinuz preseed/file=/cdrom/install/preseed_vmware.cfg auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us
   initrd  /install/initrd.gz
 }
 
