resolve issue idaholab/Malcolm#27, by capping max swap size at 16GB

--- a/malcolm-iso/config/includes.binary/install/preseed_multipar.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_multipar.cfg
@@ -71,7 +71,7 @@ d-i partman-auto/expert_recipe string          \
        filesystem{ ext4 }                      \
        mountpoint{ /boot }                     \
      .                                         \
-     150% 150% 150% linux-swap                 \
+     8192 8241 16384 linux-swap                \
        $defaultignore{ }                       \
        $lvmok{ }                               \
        in_vg { main } lv_name{ swap }          \
