--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -11,7 +11,7 @@ filter {
   }
   if ([@metadata][ENV_LOGSTASH_OUI_LOOKUP] == "true") {
 
-    # srcMac/dstMac are arrays at this point, as Moloch expects them to be
+    # srcMac/dstMac are arrays at this point, as Arkime expects them to be
 
     if ([srcMac]) and ([srcMac][0]) {
 
@@ -365,7 +365,7 @@ filter {
   ################################################################################################
 
   ######## JA3 community hashes lookup ###########################################################
-  # ja3/ja3s are arrays at this point, as Moloch expects them to be
+  # ja3/ja3s are arrays at this point, as Arkime expects them to be
 
   if ([tls][ja3]) and ([tls][ja3][0]) {
     translate {
