--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3,7 +3,7 @@
 #
 # see https://docs.zeek.org/en/stable/script-reference/log-files.html for Zeek logfile documentation
 #
-# see source.zeeklogs.js for the Moloch code that turns these into UI fields
+# see source.zeeklogs.js for the Arkime code that turns these into UI fields
 #
 # this monstrosity can be used to profile:
 #   $ curl -XGET http://localhost:9600/_node/stats/pipelines | python -mjson.tool | grep -P '"(id|duration_in_millis)":' | sed "s/.*: //" | sed ':a;N;$!ba;s/",\n/ /g' | sed "s/[\",]//g" | awk -F " " '{printf("%s %s\n", $2, $1)}' | sort -n
