--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -648,7 +648,7 @@ filter {
 
       if ([zeek_ssl][ssl_version]) {
         # turn TLSv10, TLSv13, TSLv12, etc. to 'tls' and '1.2', etc.
-        # TODO: tls.cipher already exists as a Moloch field, will this conflict/duplicate that?
+        # TODO: tls.cipher already exists as a Arkime field, will this conflict/duplicate that?
         # EDIT: it won't duplicate it, but it will replace it. I guess that's okay for now.
         ruby {
           id => "ruby_ecs_ssl_version_parse"
@@ -676,7 +676,7 @@ filter {
                  lowercase => [ "[tls][next_protocol]" ] }
       }
 
-      # TODO: tls.cipher already exists as a Moloch field, will this conflict/duplicate that?
+      # TODO: tls.cipher already exists as a Arkime field, will this conflict/duplicate that?
       # EDIT: apparently it does duplicate the value, so I'm commenting this out for now...
       #if ([zeek_ssl][cipher]) {               mutate { id => "mutate_add_field_ecs_zeek_tls_cipher"
       #                                                 add_field => { "[tls][cipher]" => "%{[zeek_ssl][cipher]}" } } }
@@ -739,11 +739,11 @@ filter {
     #     instances of error, error_msg, reply, status code, etc...
     # ☐ User - Fields to describe the user relevant to the event. - https://www.elastic.co/guide/en/ecs/current/ecs-user.html
     #   - a *lot* of the details ECS wants for the user (client, destination, email, domain, etc.) aren't provided by Zeek
-    #     also, it appears that there is an issue with type mismatch between Moloch's "user" field and ECS "user.name", etc.
+    #     also, it appears that there is an issue with type mismatch between Arkime's "user" field and ECS "user.name", etc.
     # ☐ Vulnerability - Fields to describe the vulnerability relevant to an event. - https://www.elastic.co/guide/en/ecs/current/ecs-vulnerability.html
     #   - There are some CVE zeek plugins, they may be mappable to this (?)
     # ☐ VLAN - Fields to describe observed VLAN information. - https://www.elastic.co/guide/en/ecs/current/ecs-vlan.html
-    #   - conflicts with Moloch's VLAN field:
+    #   - conflicts with Arkime's VLAN field:
     #       Can't merge a non object mapping [vlan] with an object mapping [vlan]", "caused_by"=>{"type"=>"illegal_argument_exception",
     #       "reason"=>"Can't merge a non object mapping [vlan] with an object mapping [vlan]
 
