--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-moloch.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-moloch.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Malcolm - Moloch
+Name=Malcolm - Arkime
 Exec=/usr/bin/chromium https://localhost/
 Terminal=false
 X-MultipleArgs=false
