--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -1,6 +1,6 @@
-# Moloch config.ini file
-# Latest settings documentation: https://github.com/aol/moloch/wiki/Settings
-# See also https://github.com/aol/moloch/blob/master/release/config.ini.sample
+# Arkime config.ini file
+# Latest settings documentation: https://github.com/arkime/arkime/wiki/Settings
+# See also https://github.com/arkime/arkime/blob/master/release/config.ini.sample
 #
 
 [default]
@@ -8,7 +8,7 @@ elasticsearch=http://elasticsearch:9200
 cronQueries=true
 rotateIndex=daily
 passwordSecret=Malcolm
-httpRealm=Moloch
+httpRealm=Arkime
 interface=eth0
 wiseHost=127.0.0.1
 wisePort=8081
@@ -27,9 +27,9 @@ geoLite2Country=/data/moloch/etc/GeoLite2-Country.mmdb
 geoLite2ASN=/data/moloch/etc/GeoLite2-ASN.mmdb
 rirFile=/data/moloch/etc/ipv4-address-space.csv
 ouiFile=/data/moloch/etc/oui.txt
-dropUser=moloch
-dropGroup=moloch
-# implicit auto-creation of users for Moloch (see https://github.com/aol/moloch/pull/1120)
+dropUser=arkime
+dropGroup=arkime
+# implicit auto-creation of users for Arkime (see https://github.com/arkime/arkime/pull/1120)
 # The userAutoCreateTmpl should more or less match what's in /etc/user_settings.json
 #    which is what's used when creating the default admin user.
 userNameHeader=http_auth_http_user
