--- a/moloch/etc/wise.ini
+++ b/moloch/etc/wise.ini
@@ -1,6 +1,6 @@
-# Moloch WISE data source config file
-# See also https://github.com/aol/moloch/wiki/WISE
-#          https://github.com/aol/moloch/blob/master/release/wise.ini.sample
+# Arkime WISE data source config file
+# See also https://github.com/arkime/arkime/wiki/WISE
+#          https://github.com/arkime/arkime/blob/master/release/wise.ini.sample
 #
 
 [wiseService]
