--- a/moloch/supervisord.conf
+++ b/moloch/supervisord.conf
@@ -23,7 +23,7 @@ startretries=0
 autorestart=false
 stopasgroup=true
 killasgroup=true
-directory=%(ENV_MOLOCHDIR)s
+directory=%(ENV_ARKIMEDIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
@@ -34,8 +34,8 @@ startsecs=0
 startretries=0
 stopasgroup=true
 killasgroup=true
-directory=%(ENV_MOLOCHDIR)s/wiseService
-stdout_logfile=%(ENV_MOLOCHDIR)s/logs/wise.log
+directory=%(ENV_ARKIMEDIR)s/wiseService
+stdout_logfile=%(ENV_ARKIMEDIR)s/logs/wise.log
 redirect_stderr=true
 
 [program:viewer]
@@ -44,7 +44,7 @@ startsecs=0
 startretries=0
 stopasgroup=true
 killasgroup=true
-directory=%(ENV_MOLOCHDIR)s
+directory=%(ENV_ARKIMEDIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
@@ -54,7 +54,7 @@ command=python3 /data/pcap_moloch_processor.py
   --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
   --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
   --start-sleep 10
-  --threads %(ENV_MOLOCH_ANALYZE_PCAP_THREADS)s
+  --threads %(ENV_ARKIME_ANALYZE_PCAP_THREADS)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
   --moloch /data/moloch/bin/moloch-capture
@@ -64,14 +64,14 @@ startsecs=15
 startretries=1
 stopasgroup=true
 killasgroup=true
-directory=%(ENV_MOLOCHDIR)s
+directory=%(ENV_ARKIMEDIR)s
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:readme]
 command=python3 -m http.server 8000
-directory=%(ENV_MOLOCHDIR)s/doc
+directory=%(ENV_ARKIMEDIR)s/doc
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
