--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -10,9 +10,9 @@ export PCAP_SNAPLEN=0
 export PCAP_MAX_DISK_FILL=90
 export PCAP_PRUNE_CHECK_SECONDS=60
 
-export MOLOCH_VIEWER_PORT=8005
-export MOLOCH_PACKET_THREADS=5
-export MOLOCH_PACKET_ACL=
+export ARKIME_VIEWER_PORT=8005
+export ARKIME_PACKET_THREADS=5
+export ARKIME_PACKET_ACL=
 
 export PROTOLOGBEAT_PORT=9515
 export PROTOLOGBEAT_INTERVAL=10
@@ -42,7 +42,7 @@ export ZEEK_DISABLE_TRACK_ALL_ASSETS=
 export ZEEK_DISABLE_WIREGUARD=
 export ZEEK_DISABLE_WIREGUARD_TRANSPORT_PACKETS=true
 
-# affects Moloch only for now: beats values are stored in keystores per-beat
+# affects Arkime only for now: beats values are stored in keystores per-beat
 export ES_PROTOCOL=https
 export ES_HOST=127.0.0.1
 export ES_PORT=9200
@@ -71,7 +71,7 @@ export AUTOSTART_FILEBEAT=false
 export AUTOSTART_HEATBEAT=false
 export AUTOSTART_HEATBEAT_SENSORS=false
 export AUTOSTART_METRICBEAT=false
-export AUTOSTART_MOLOCH=false
+export AUTOSTART_ARKIME=false
 export AUTOSTART_NETSNIFF=false
 export AUTOSTART_PRUNE_PCAP=false
 export AUTOSTART_PRUNE_ZEEK=false
