--- a/moloch/moloch_regression_test_harness/docker-compose.yml
+++ b/moloch/moloch_regression_test_harness/docker-compose.yml
@@ -27,11 +27,11 @@ services:
         retries: 3
         start_period: 30s
     network_mode: host
-  moloch:
+  arkime:
     build:
       context: .
-      dockerfile: Dockerfiles/moloch.Dockerfile
-    image: molochtest:latest
+      dockerfile: Dockerfiles/arkime.Dockerfile
+    image: arkimetest:latest
     restart: "no"
     ulimits:
       memlock:
