--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,12 +29,12 @@ http {
   # if LDAP authentication is enabled, this will configure the ldap_server section
   include /etc/nginx/nginx_ldap_rt.conf;
 
-  upstream docker-moloch {
-    server moloch:8005;
+  upstream docker-arkime {
+    server arkime:8005;
   }
 
   upstream docker-malcolm-readme {
-    server moloch:8000;
+    server arkime:8000;
   }
 
   upstream docker-upload {
@@ -82,7 +82,7 @@ http {
     }
   }
 
-  # Moloch interface
+  # Arkime interface
   server {
     listen 443 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
@@ -95,7 +95,7 @@ http {
     location /readme {
       proxy_pass http://docker-malcolm-readme/README.html;
       proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header Host arkime.malcolm.local;
     }
 
     # Malcolm file upload
@@ -124,10 +124,10 @@ http {
     location ~* ^/logstash\b(.*) {
       proxy_pass http://docker-logstash-stats/_node/stats$1;
       proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header Host arkime.malcolm.local;
     }
 
-    # Moloch -> Kibana shortcut
+    # Arkime -> Kibana shortcut
     location ~* ^/idmol2kib(.*) {
 
       set $filter_start_time now-1d;
@@ -156,12 +156,12 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # Kibana -> Moloch shortcut
+    # Kibana -> Arkime shortcut
     location ~* /idkib2mol/(.*) {
       rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
-      proxy_pass http://docker-moloch;
+      proxy_pass http://docker-arkime;
       proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
     }
@@ -207,17 +207,17 @@ http {
       add_header Content-Type "application/javascript";
       default_type application/javascript;
       add_header X-Content-Type-Options 'nosniff';
-      proxy_pass http://docker-moloch/cyberchef/$1;
+      proxy_pass http://docker-arkime/cyberchef/$1;
       proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
     }
 
     location / {
-      proxy_pass http://docker-moloch;
+      proxy_pass http://docker-arkime;
       proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
     }
@@ -261,12 +261,12 @@ http {
       alias /etc/nginx/favicon.ico;
     }
 
-    # Kibana -> Moloch shortcut
+    # Kibana -> Arkime shortcut
     location ~* /idkib2mol/(.*) {
       rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
-      proxy_pass http://docker-moloch;
+      proxy_pass http://docker-arkime;
       proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
     }
