--- a/sensor-iso/interface/sensor_ctl/moloch/config.ini
+++ b/sensor-iso/interface/sensor_ctl/moloch/config.ini
@@ -5,7 +5,7 @@
 elasticsearch=http://192.168.0.1:9200
 rotateIndex=daily
 passwordSecret=Malcolm
-httpRealm=Moloch
+httpRealm=Arkime
 interface=enp0s1
 pcapDir=/tmp
 maxFileSizeG=2
@@ -46,7 +46,7 @@ logFileCreation=true
 logHTTPConnections=false
 
 ### High Performance settings
-# https://github.com/aol/moloch/wiki/Settings#High_Performance_Settings
+# https://github.com/arkime/arkime/wiki/Settings#High_Performance_Settings
 magicMode=basic
 pcapReadMethod=tpacketv3
 tpacketv3NumThreads=2
