--- a/sensor-iso/interface/sensor_ctl/supervisor.d/moloch.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/moloch.conf
@@ -3,22 +3,22 @@ programs=moloch-capture,moloch-viewer
 
 [program:moloch-viewer]
 command=/opt/moloch/bin/node /opt/moloch/viewer/viewer.js
-  -c "%(ENV_SUPERVISOR_PATH)s"/moloch/config.ini %(ENV_MOLOCH_HTTPS_FLAG)s
+  -c "%(ENV_SUPERVISOR_PATH)s"/moloch/config.ini %(ENV_ARKIME_HTTPS_FLAG)s
   -o pcapDir="%(ENV_PCAP_PATH)s"
-  -o viewPort=%(ENV_MOLOCH_VIEWER_PORT)s
+  -o viewPort=%(ENV_ARKIME_VIEWER_PORT)s
 startsecs=5
 startretries=2000000000
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_MOLOCH)s
+autostart=%(ENV_AUTOSTART_ARKIME)s
 directory=%(ENV_SUPERVISOR_PATH)s/moloch
 
 [program:moloch-capture]
-command=/opt/moloch/bin/moloch-capture %(ENV_MOLOCH_HTTPS_FLAG)s
+command=/opt/moloch/bin/moloch-capture %(ENV_ARKIME_HTTPS_FLAG)s
   -c "%(ENV_SUPERVISOR_PATH)s"/moloch/config.ini
   -o pcapDir="%(ENV_PCAP_PATH)s"
   -o bpf="%(ENV_CAPTURE_FILTER)s"
-  -o packetThreads=%(ENV_MOLOCH_PACKET_THREADS)s
+  -o packetThreads=%(ENV_ARKIME_PACKET_THREADS)s
   -o dropUser=sensor
   -o dropGroup=netdev
   -o geoLite2Country="%(ENV_SUPERVISOR_PATH)s"/moloch/GeoLite2-Country.mmdb
@@ -28,13 +28,13 @@ command=/opt/moloch/bin/moloch-capture %(ENV_MOLOCH_HTTPS_FLAG)s
   -o rulesFiles="%(ENV_SUPERVISOR_PATH)s"/moloch/rules.yml
   -o parsersDir=/opt/moloch/parsers
   -o pluginsDir=/opt/moloch/plugins
-  --node "%(ENV_MOLOCH_NODE_NAME)s"
-  --host "%(ENV_MOLOCH_NODE_HOST)s"
+  --node "%(ENV_ARKIME_NODE_NAME)s"
+  --host "%(ENV_ARKIME_NODE_HOST)s"
 startsecs=30
 startretries=2000000000
 autorestart=true
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_MOLOCH)s
+autostart=%(ENV_AUTOSTART_ARKIME)s
 directory=%(ENV_PCAP_PATH)s
 user=sensor
