added update procedure for capa and yara rules

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -145,7 +145,7 @@ redirect_stderr=true
 
 [program:freshclam]
 command=/usr/bin/freshclam freshclam --config-file=/etc/clamav/freshclam.conf --daemon
-autostart=%(ENV_EXTRACTED_FILE_ENABLE_FRESHCLAM)s
+autostart=%(ENV_EXTRACTED_FILE_UPDATE_RULES)s
 autorestart=true
 startsecs=0
 startretries=0
@@ -165,6 +165,15 @@ startretries=0
 stopasgroup=true
 killasgroup=true
 directory=/
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:cron]
+autorestart=true
+command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
+stopasgroup=true
+killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
