--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -68,20 +68,8 @@ filter {
   # Action ############################################################################################################
   # collect all actions/operations/commands under the parent [zeek][action] array
 
-  if ([zeek_bacnet]) {
-    # bacnet prefers service_choice, else see if we can glean action from NAK (negative acknowledgement) message
-    if ([zeek_bacnet][service_choice]) {
-      mutate { id => "mutate_merge_normalize_zeek_bacnet_service_choice"
-               merge => { "[zeek][action]" => "[zeek_bacnet][service_choice]" } }
-    } else if ([zeek_bacnet][data_dict][result] =~ / NAK$/) {
-      mutate { id => "mutate_add_field_metadata_zeek_bacnet_data_dict_result_action"
-               add_field => { "[@metadata][zeek_bacnet_action]" => "%{[zeek_bacnet][data_dict][result]}" } }
-      mutate { id => "mutate_gsub_zeek_bacnet_action"
-               gsub => [ "[@metadata][zeek_bacnet_action]", " NAK$", "" ] }
-      mutate { id => "mutate_merge_zeek_bacnet_action"
-               merge => { "[zeek][action]" => "[@metadata][zeek_bacnet_action]" } }
-    }
-  }
+  if ([zeek_bacnet][pdu_service])               { mutate { id => "mutate_merge_normalize_zeek_bacnet_pdu_service"
+                                                           merge => { "[zeek][action]" => "[zeek_bacnet][pdu_service]" } } }
 
   if ([zeek_cip][cip_service])                  { mutate { id => "mutate_merge_normalize_zeek_cip_cip_service"
                                                            merge => { "[zeek][action]" => "[zeek_cip][cip_service]" } } }
@@ -114,8 +102,8 @@ filter {
              merge => { "[zeek][action]" => "[@metadata][dns_action]" } }
   }
 
-  if ([zeek_enip][command])                     { mutate { id => "mutate_merge_normalize_zeek_enip_command"
-                                                           merge => { "[zeek][action]" => "[zeek_enip][command]" } } }
+  if ([zeek_enip][enip_command])                { mutate { id => "mutate_merge_normalize_zeek_enip_enip_command"
+                                                           merge => { "[zeek][action]" => "[zeek_enip][enip_command]" } } }
 
   if ([zeek_ftp][command])                      { mutate { id => "mutate_merge_normalize_zeek_ftp_command"
                                                            merge => { "[zeek][action]" => "[zeek_ftp][command]" } } }
@@ -357,26 +345,19 @@ filter {
   # collect all result/status/response/errors under the parent [zeek][result] array
 
   if ([zeek_bacnet]) {
-    if ([zeek_bacnet][data_dict][result] =~ / NAK$/) {
-      # clean failure from NAK in data_dict.result
-      mutate { id => "mutate_add_field_zeek_bacnet_nak_result_failure"
-               add_field => { "[@metadata][zeek_bacnet_result]" => "Failure" } }
-    } else if ([zeek_bacnet][data_dict][result] =~ /^Success/) {
-      mutate { id => "mutate_add_field_zeek_bacnet_nak_result_success"
+    if ([zeek_bacnet][result_code]) {
+      mutate { id => "mutate_merge_normalize_zeek_bacnet_result_code"
+      merge => { "[zeek][result]" => "[zeek_bacnet][result_code]" } }
+    } else if ([zeek_bacnet][pdu_service]) {
+      mutate { id => "mutate_add_field_zeek_bacnet_success"
                add_field => { "[@metadata][zeek_bacnet_result]" => "Success" } }
-    } else if ([zeek_bacnet][apdu_type]) and ([zeek_bacnet][apdu_type] !~ /^apdu_type/) {
-      # use apdu_type as result (acknowledge, abort, request, etc.)
-      mutate { id => "mutate_add_field_zeek_bacnet_apdu_result"
-               add_field => { "[@metadata][zeek_bacnet_result]" => "%{[zeek_bacnet][apdu_type]}" } }
-    }
-    if ([@metadata][zeek_bacnet_result]) {
-      mutate { id => "mutate_merge_zeek_bacnet_result"
+      mutate { id => "mutate_merge_field_zeek_bacnet_success"
                merge => { "[zeek][result]" => "[@metadata][zeek_bacnet_result]" } }
     }
   }
 
-  if ([zeek_cip][status]) { mutate { id => "mutate_merge_normalize_zeek_cip_status_result"
-                                     merge => { "[zeek][result]" => "[zeek_cip][status]" } } }
+  if ([zeek_cip][cip_status]) { mutate { id => "mutate_merge_normalize_zeek_cip_status_result"
+                                         merge => { "[zeek][result]" => "[zeek_cip][cip_status]" } } }
 
   if ([zeek_dhcp]) {
     # dhcp server_message and client_message populate result, as do ACK and NAK message types
