spot-checking new ICSNNP bacnet parser

--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -4,6 +4,11 @@ filter {
   mutate {
     id => "mutate_convert_zeek_bulk"
     convert => {
+    invoke_id
+      "[zeek_bacnet][invoke_id]" => "integer"
+      "[zeek_bacnet_discovery][instance_number]" => "integer"
+      "[zeek_bacnet_property][instance_number]" => "integer"
+      "[zeek_bacnet_property][array_index]" => "integer"
       "[zeek_conn][duration]" => "float"
       "[zeek_dce_rpc][rtt]" => "float"
       "[zeek_dhcp][duration]" => "float"
