spot-checking dnp3 fields, converted some types to interger

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -626,6 +626,8 @@ filter {
     #############################################################################################################################
     # dnp3_control.log
     # https://github.com/idaholab/ICSNPP
+    #
+    # Todo: some fields have "Nul" values, do we want to remove them or does it make sense to have them stay?
 
     dissect {
       id => "dissect_zeek_dnp3_control"
