--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -12,6 +12,13 @@ filter {
       "[zeek_conn][duration]" => "float"
       "[zeek_dce_rpc][rtt]" => "float"
       "[zeek_dhcp][duration]" => "float"
+      "[zeek_dnp3_control][index_number]" => "integer"
+      "[zeek_dnp3_control][execute_count]" => "integer"
+      "[zeek_dnp3_control][on_time]" => "integer"
+      "[zeek_dnp3_control][off_time]" => "integer"
+      "[zeek_dnp3_objects][object_count]" => "integer"
+      "[zeek_dnp3_objects][range_low]" => "integer"
+      "[zeek_dnp3_objects][range_high]" => "integer"
       "[zeek_dns][rtt]" => "float"
       "[zeek_ldap][result_code]" => "integer"
       "[zeek_modbus_register][delta]" => "float"
