spot checking new ICS parsers, converting some values to integers

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -362,6 +362,8 @@ filter {
     #############################################################################################################################
     # cip.log
     # https://github.com/idaholab/ICSNPP
+    #
+    # todo: class_id, instance_id is a hex integer, should it be converted to an integer?
 
     dissect {
       id => "dissect_zeek_cip"
@@ -392,6 +394,9 @@ filter {
     #############################################################################################################################
     # cip_identity.log
     # https://github.com/idaholab/ICSNPP
+    #
+    # TODO: device_status and device_state are a hex string, convert to int?
+    # TODO: socket_address is an IP, do a Geo lookup in normalization?
 
     dissect {
       id => "dissect_zeek_cip_identity"
@@ -422,6 +427,10 @@ filter {
     #############################################################################################################################
     # cip_io.log
     # https://github.com/idaholab/ICSNPP
+    #
+    # cip_io.io_data is a hex-escaped binary string, should we do anything with it?
+    # even maybe just add a flag for it to enable/disable it in zeek?
+    #
 
     dissect {
       id => "dissect_zeek_cip_io"
@@ -750,6 +759,9 @@ filter {
     #############################################################################################################################
     # enip.log
     # https://github.com/idaholab/ICSNPP
+    #
+    # TODO: any way to interpret options?
+    # TODO: some fields have 0x0000000000000000, 0x00000000, are these valueable or should they be removed
 
     dissect {
       id => "dissect_zeek_enip"
