--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -9,6 +9,14 @@ filter {
       "[zeek_bacnet_discovery][instance_number]" => "integer"
       "[zeek_bacnet_property][instance_number]" => "integer"
       "[zeek_bacnet_property][array_index]" => "integer"
+      "[zeek_cip][cip_sequence_count]" => "integer"
+      "[zeek_cip_identity][device_type_id]" => "integer"
+      "[zeek_cip_identity][encapsulation_version]" => "integer"
+      "[zeek_cip_identity][product_code]" => "integer"
+      "[zeek_cip_identity][socket_port]" => "integer"
+      "[zeek_cip_identity][vendor_id]" => "integer"
+      "[zeek_cip_io][data_length]" => "integer"
+      "[zeek_cip_io][sequence_number]" => "integer"
       "[zeek_conn][duration]" => "float"
       "[zeek_dce_rpc][rtt]" => "float"
       "[zeek_dhcp][duration]" => "float"
@@ -20,7 +28,19 @@ filter {
       "[zeek_dnp3_objects][range_low]" => "integer"
       "[zeek_dnp3_objects][range_high]" => "integer"
       "[zeek_dns][rtt]" => "float"
+      "[zeek_enip][length]" => "integer"
       "[zeek_ldap][result_code]" => "integer"
+      "[zeek_modbus_detailed][unit_id]" => "integer"
+      "[zeek_modbus_detailed][address]" => "integer"
+      "[zeek_modbus_detailed][quantity]" => "integer"
+      "[zeek_modbus_mask_write_register][unit_id]" => "integer"
+      "[zeek_modbus_mask_write_register][address]" => "integer"
+      "[zeek_modbus_mask_write_register][and_mask]" => "integer"
+      "[zeek_modbus_mask_write_register][or_mask]" => "integer"
+      "[zeek_modbus_read_write_multiple_registers][unit_id]" => "integer"
+      "[zeek_modbus_read_write_multiple_registers][write_start_address]" => "integer"
+      "[zeek_modbus_read_write_multiple_registers][read_start_address]" => "integer"
+      "[zeek_modbus_read_write_multiple_registers][read_quantity]" => "integer"
       "[zeek_modbus_register][delta]" => "float"
       "[zeek_modbus_register][new_val]" => "integer"
       "[zeek_modbus_register][old_val]" => "integer"
