some lookups for ICS zeek logs in logstash

--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -6,6 +6,8 @@ filter {
     convert => {
       "[zeek_bacnet][invoke_id]" => "integer"
       "[zeek_bacnet_discovery][instance_number]" => "integer"
+      "[zeek_bacnet_discovery][range_low]" => "integer"
+      "[zeek_bacnet_discovery][range_high]" => "integer"
       "[zeek_bacnet_property][instance_number]" => "integer"
       "[zeek_bacnet_property][array_index]" => "integer"
       "[zeek_cip][cip_sequence_count]" => "integer"
