--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -1,6 +1,8 @@
 filter {
 
   # todo: make added fields not zeek-specific? (see ECS topic branch)
+  # all the lookups are done here, but some of them are still zeek-specific which
+  # IMO isn't the cleanest. could be refactored/split.
 
   ######## MAC address OUI (manufacturer) lookup #################################################
 
@@ -72,7 +74,7 @@ filter {
   } # end if ENV_LOGSTASH_OUI_LOOKUP
   ################################################################################################
 
-  ######## IP address class tagging, GeoIP/ASN lookups, and reverse DNS###########################
+  ######## IP address class tagging, GeoIP/ASN lookups, and reverse DNS ###########################
   if ([srcIp]) {
     cidr {
       id      => "cidr_add_tag_internal_source"
@@ -341,6 +343,30 @@ filter {
     } # end if radius.endpointIp
 
   } # end if radius
+
+  if ([zeek_cip_identity][socket_address]) {
+
+    # if this is a zeek_cip_identity record with socket_address, ASN/GeoIP it as well
+    geoip {
+      id => "geoip_zeek_cip_identity_socket_address"
+      default_database_type => "ASN"
+      source => "[zeek_cip_identity][socket_address]"
+      target => "[@metadata][zeek_cip_identity_asn]"
+    }
+    if ([@metadata][zeek_cip_identity_asn] and [@metadata][zeek_cip_identity_asn][as_org] and [@metadata][zeek_cip_identity_asn][asn]) {
+      # this is stupid, the %{} doesn't seem to be liked by mutate.merge
+      mutate { id => "mutate_add_field_zeek_cip_identity_asn"
+               add_field => { "[@metadata][cip_asn_str]" => "AS%{[@metadata][zeek_cip_identity_asn][asn]} %{[@metadata][zeek_cip_identity_asn][as_org]}" } }
+      mutate { id => "mutate_merge_zeek_cip_identity_asn"
+               merge => { "[zeek_cip_identity][socket_address_asn]" => "[@metadata][cip_asn_str]" } }
+    }
+    geoip {
+      id => "geoip_zeek_cip_identity_socket_address_geo"
+      source => "[zeek_cip_identity][socket_address]"
+      target => "[zeek_cip_identity][socket_address_geo]"
+    }
+
+  } # end if zeek_cip_identity.socket_address
 
   if ([zeek_ssl][server_name]) {
     mutate {
