--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -294,8 +294,6 @@ filter {
     #############################################################################################################################
     # bacnet_discovery.log
     # https://github.com/idaholab/ICSNPP
-    #
-    # TODO: bacnet_discovery.range could be split into a min/max (All, 12345-12345, etc.)
 
     dissect {
       id => "dissect_zeek_bacnet_discovery"
@@ -395,8 +393,7 @@ filter {
     # cip_identity.log
     # https://github.com/idaholab/ICSNPP
     #
-    # TODO: device_status and device_state are a hex string, convert to int?
-    # TODO: socket_address is an IP, do a Geo lookup in normalization?
+    # TODO: device_status and device_state are a hex int string, convert to int?
 
     dissect {
       id => "dissect_zeek_cip_identity"
@@ -427,9 +424,6 @@ filter {
     #############################################################################################################################
     # cip_io.log
     # https://github.com/idaholab/ICSNPP
-    #
-    # cip_io.io_data is a hex-escaped binary string, should we do anything with it?
-    # even maybe just add a flag for it to enable/disable it in zeek?
     #
 
     dissect {
@@ -635,8 +629,6 @@ filter {
     #############################################################################################################################
     # dnp3_control.log
     # https://github.com/idaholab/ICSNPP
-    #
-    # Todo: some fields have "Nul" values, do we want to remove them or does it make sense to have them stay?
 
     dissect {
       id => "dissect_zeek_dnp3_control"
@@ -760,8 +752,6 @@ filter {
     # enip.log
     # https://github.com/idaholab/ICSNPP
     #
-    # TODO: any way to interpret options?
-    # TODO: some fields have 0x0000000000000000, 0x00000000, are these valueable or should they be removed
 
     dissect {
       id => "dissect_zeek_enip"
@@ -3018,6 +3008,37 @@ filter {
       }
     }
 
+  } else if ([source] == "bacnet_discovery") {
+    #############################################################################################################################
+    # bacnet_discovery.log specific logic
+
+    # bacnet_discovery.range ccan be split into a min/max (All, 12345-12350, etc.)
+    if ([zeek_bacnet_discovery][range]) {
+      if ([zeek_bacnet_discovery][range] == "All") {
+        add_field => { "[zeek_bacnet_discovery][range_low]" => "0" }
+        add_field => { "[zeek_bacnet_discovery][range_high]" => "4194300" }
+      } else if ([zeek_bacnet_discovery][range] =~ "^\d+-\d+$") {
+        ruby {
+          id => "ruby_bacnet_discovery_range_split"
+          code => "
+            if (bacnetRange = event.get('[zeek_bacnet_discovery][range]').split('-')) and (bacnetRange.length == 2) then
+              event.set('[zeek_bacnet_discovery][range_low]', bacnetRange[0])
+              event.set('[zeek_bacnet_discovery][range_high]', bacnetRange[1])
+            end"
+        }
+      }
+    }
+
+  } else if ([source] == "cip_io") {
+    #############################################################################################################################
+    # cip_io.log specific logic
+
+    # for now, drop hex-encoded binary io_data for size
+    if ([zeek_cip_io][io_data]) {
+      mutate { id => "mutate_remove_field_zeek_cip_io_io_data"
+               remove_field => [ "[zeek_cip_io][io_data]" ] }
+    }
+
   } else if ([source] == "dhcp") {
     #############################################################################################################################
     # dhcp.log specific logic
@@ -3088,6 +3109,22 @@ filter {
         end"
     }
 
+  } else if ([source] == "dnp3_control") {
+    #############################################################################################################################
+    # dnp3_control.log specific logic
+
+    # some fields have "Nul" values, remove them
+
+    if ([zeek_dnp3_control][trip_control_code] == "Nul") {
+      mutate { id => "mutate_remove_field_zeek_dnp3_control_trip_control_code"
+               remove_field => [ "[zeek_dnp3_control][trip_control_code]" ] }
+    }
+
+    if ([zeek_dnp3_control][operation_type] == "Nul") {
+      mutate { id => "mutate_remove_field_zeek_dnp3_control_operation_type"
+               remove_field => [ "[zeek_dnp3_control][operation_type]" ] }
+    }
+
   } else if ([source] == "dns") {
     #############################################################################################################################
     # dns.log specific logic
@@ -3143,6 +3180,27 @@ filter {
                merge => { "[dns][qt]" => "[zeek_dns][qtype_name]" } }
       mutate { id => "mutate_add_field_dns_qtCnt"
                add_field => { "[dns][qtCnt]" => "1" } }
+    }
+
+
+  } else if ([source] == "enip") {
+    #############################################################################################################################
+    # enip.log specific logic
+
+    # TODO: any way to interpret options?
+
+    # TODO some fields have 0x0000000000000000, 0x00000000, are these valueable or should they be removed?
+    if ([zeek_enip][options] == "0x00000000") {
+      mutate { id => "mutate_remove_field_zeek_enip_options"
+               remove_field => [ "[zeek_enip][options]" ] }
+    }
+    if ([zeek_enip][sender_context] == "0x0000000000000000") {
+      mutate { id => "mutate_remove_field_zeek_enip_sender_context"
+               remove_field => [ "[zeek_enip][sender_context]" ] }
+    }
+    if ([zeek_enip][session_handle] == "0x00000000") {
+      mutate { id => "mutate_remove_field_zeek_enip_session_handle"
+               remove_field => [ "[zeek_enip][session_handle]" ] }
     }
 
   } else if ([source] == "files") {
