fix adding range low/high

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3015,8 +3015,10 @@ filter {
     # bacnet_discovery.range ccan be split into a min/max (All, 12345-12350, etc.)
     if ([zeek_bacnet_discovery][range]) {
       if ([zeek_bacnet_discovery][range] == "All") {
-        add_field => { "[zeek_bacnet_discovery][range_low]" => "0" }
-        add_field => { "[zeek_bacnet_discovery][range_high]" => "4194300" }
+        mutate { id => "mutate_add_field_zeek_bacnet_discovery_range_low"
+                 add_field => { "[zeek_bacnet_discovery][range_low]" => "0" } }
+        mutate { id => "mutate_add_field_zeek_bacnet_discovery_range_high"
+                 add_field => { "[zeek_bacnet_discovery][range_high]" => "4194300" } }
       } else if ([zeek_bacnet_discovery][range] =~ "^\d+-\d+$") {
         ruby {
           id => "ruby_bacnet_discovery_range_split"
