--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -71,6 +71,12 @@ filter {
   if ([zeek_bacnet][pdu_service])               { mutate { id => "mutate_merge_normalize_zeek_bacnet_pdu_service"
                                                            merge => { "[zeek][action]" => "[zeek_bacnet][pdu_service]" } } }
 
+  if ([zeek_bacnet_discovery][pdu_service])     { mutate { id => "mutate_merge_normalize_zeek_bacnet_discovery_pdu_service"
+                                                           merge => { "[zeek][action]" => "[zeek_bacnet_discovery][pdu_service]" } } }
+
+  if ([zeek_bacnet_property][pdu_service])      { mutate { id => "mutate_merge_normalize_zeek_bacnet_property_pdu_service"
+                                                           merge => { "[zeek][action]" => "[zeek_bacnet_property][pdu_service]" } } }
+
   if ([zeek_cip][cip_service])                  { mutate { id => "mutate_merge_normalize_zeek_cip_cip_service"
                                                            merge => { "[zeek][action]" => "[zeek_cip][cip_service]" } } }
 
@@ -82,6 +88,22 @@ filter {
 
   if ([zeek_dnp3][fc_request])                  { mutate { id => "mutate_merge_normalize_zeek_dnp3_fc_request"
                                                            merge => { "[zeek][action]" => "[zeek_dnp3][fc_request]" } } }
+
+  if ([zeek_dnp3_control]) {
+    ruby {
+      # action = function_code:operation_type:trip_control_code
+      id => "ruby_zeek_dnp3_control_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[zeek][action]'))
+        actions.append([event.get('[zeek_dnp3_control][function_code]'),
+                        event.get('[zeek_dnp3_control][operation_type]'),
+                        event.get('[zeek_dnp3_control][trip_control_code]')].compact.join(':'))
+        event.set('[zeek][action]', actions)"
+    }
+  }
+
+  if ([zeek_dnp3_read_objects][function_code])  { mutate { id => "mutate_merge_normalize_zeek_dnp3_read_objects"
+                                                           merge => { "[zeek][action]" => "[zeek_dnp3_read_objects][function_code]" } } }
 
   if ([zeek_dns]) {
     # action: query class and type
@@ -134,6 +156,12 @@ filter {
 
   if ([zeek_modbus][func])                      { mutate { id => "mutate_merge_normalize_zeek_modbus_func"
                                                            merge => { "[zeek][action]" => "[zeek_modbus][func]" } } }
+
+  if ([zeek_modbus_mask_write_register][func])  { mutate { id => "mutate_merge_normalize_zeek_modbus_mask_write_register_func"
+                                                           merge => { "[zeek][action]" => "[zeek_modbus_mask_write_register][func]" } } }
+
+  if ([zeek_modbus_read_write_multiple_registers][func])  { mutate { id => "mutate_merge_normalize_zeek_modbus_read_write_multiple_registers"
+                                                            merge => { "[zeek][action]" => "[zeek_modbus_read_write_multiple_registers][func]" } } }
 
   if ([zeek_mqtt_connect][connect_status]) {
     # this log entry implicitly means "connect"
@@ -384,6 +412,10 @@ filter {
   if ([zeek_dnp3][iin_flags]) { mutate { id => "mutate_merge_zeek_dnp3_iin_flags"
                                          merge => { "[zeek][result]" => "[zeek_dnp3][iin_flags]" } } }
 
+  # dnp3_control.status_code
+  if ([zeek_dnp3_control][status_code]) { mutate { id => "mutate_merge_zeek_dnp3_control_status_code"
+                                                   merge => { "[zeek][result]" => "[zeek_dnp3_control][status_code]" } } }
+
   if ([zeek_dns]) {
     # DNS result is populated by rcode_name (with NOERROR being translated to Success), and rejected
     if ([zeek_dns][rcode_name]) {
@@ -404,6 +436,10 @@ filter {
                merge => { "[zeek][result]" => "[@metadata][zeek_dns_rejected_result]" } }
     }
   }
+
+  # zeek_enip.enip_status
+  if ([zeek_enip][enip_status])         { mutate { id => "mutate_merge_normalize_zeek_enip_enip_status"
+                                                   merge => { "[zeek][result]" => "[zeek_enip][enip_status]" } } }
 
   if ([zeek_ftp][reply_code]) {
     # normalized version of reply code (reply_msg is too unpredictable)
