saved search fixes, splitting some values

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3411,6 +3411,29 @@ filter {
     # ldap.log specific logic
     # todo: ldap.authtype, ldap.authtypeCnt, ldap.bindname, ldap.bindnameCnt
 
+  } else if ([source] == "modbus_detailed") {
+    #############################################################################################################################
+    # modbus_detailed.log specific logic
+
+    if ([zeek_modbus_detailed][values]) {
+      mutate { id => "mutate_split_zeek_modbus_detailed_values"
+               split => { "[zeek_modbus_detailed][values]" => "," } }
+    }
+
+  } else if ([source] == "modbus_read_write_multiple_registers") {
+    #############################################################################################################################
+    # modbus_read_write_multiple_registers.log specific logic
+
+    if ([zeek_modbus_read_write_multiple_registers][read_registers]) {
+      mutate { id => "mutate_split_zeek_modbus_read_write_multiple_registers_read_registers"
+               split => { "[zeek_modbus_read_write_multiple_registers][read_registers]" => "," } }
+    }
+
+    if ([zeek_modbus_read_write_multiple_registers][write_registers]) {
+      mutate { id => "mutate_split_zeek_modbus_read_write_multiple_registers_write_registers"
+               split => { "[zeek_modbus_read_write_multiple_registers][write_registers]" => "," } }
+    }
+
   } else if ([source] == "mqtt_publish") {
     #############################################################################################################################
     # mqtt_publish.log specific logic
