working on adding BSAP

--- a/logstash/maps/zeek_log_ecs_categories.yaml
+++ b/logstash/maps/zeek_log_ecs_categories.yaml
@@ -1,6 +1,13 @@
 "bacnet": ["ot", "network"]
 "bacnet_discovery": ["ot", "network"]
 "bacnet_property": ["ot", "network"]
+"bsap_ip_header": ["ot", "network"]
+"bsap_ip_rdb": ["ot", "network"]
+"bsap_ip_unknown": ["ot", "network"]
+"bsap_serial_header": ["ot", "network"]
+"bsap_serial_rdb": ["ot", "network"]
+"bsap_serial_rdb_ext": ["ot", "network"]
+"bsap_serial_unknown": ["ot", "network"]
 "cip": ["ot", "network"]
 "cip_identity": ["ot", "network"]
 "cip_io": ["ot", "network"]
