--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -30,7 +30,9 @@ filter {
   }
 
   # report types we're going to ignore
-  if (([source] == "reporter") or
+  if (([source] == "bsap_ip_unknown") or
+      ([source] == "bsap_serial_unknown") or
+      ([source] == "reporter") or
       ([source] == "broker") or
       ([source] == "cluster") or
       ([source] == "capture_loss") or
@@ -287,6 +289,237 @@ filter {
       add_field => {
         "[zeek_cols][proto]" => "udp"
         "[zeek_cols][service]" => "bacnet"
+      }
+    }
+
+  } else if ([source] == "bsap_ip_header") {
+    #############################################################################################################################
+    # bsap_ip_header.log
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_ip_header"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][num_msg]}	%{[zeek_cols][type_name]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_ip_header"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_ip_header"
+        init => "$zeek_bsap_ip_header_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'num_msg', 'type_name' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_ip_header_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_ip_header"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "bsap"
+      }
+    }
+
+  } else if ([source] == "bsap_ip_rdb") {
+    #############################################################################################################################
+    # bsap_ip_rdb.log
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_ip_rdb"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][header_size]}	%{[zeek_cols][mes_seq]}	%{[zeek_cols][res_seq]}	%{[zeek_cols][data_len]}	%{[zeek_cols][sequence]}	%{[zeek_cols][app_func_code]}	%{[zeek_cols][node_status]}	%{[zeek_cols][func_code]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_ip_rdb"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_ip_rdb"
+        init => "$zeek_bsap_ip_rdb_field_names = [ 'ts', 'uid', 'header_size', 'mes_seq', 'res_seq', 'data_len', 'sequence', 'app_func_code', 'node_status', 'func_code', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_ip_rdb_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_ip_rdb"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "bsap"
+      }
+    }
+
+  } else if ([source] == "bsap_ip_unknown") {
+    #############################################################################################################################
+    # bsap_ip_unknown.log (dropped for now, see above)
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_ip_unknown"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_ip_unknown"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_ip_unknown"
+        init => "$zeek_bsap_ip_unknown_field_names = [ 'ts', 'uid', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_ip_unknown_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_ip_unknown"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "bsap"
+      }
+    }
+
+  } else if ([source] == "bsap_serial_header") {
+    #############################################################################################################################
+    # bsap_serial_header.log
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_serial_header"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][ser]}	%{[zeek_cols][dadd]}	%{[zeek_cols][sadd]}	%{[zeek_cols][ctl]}	%{[zeek_cols][dfun]}	%{[zeek_cols][seq]}	%{[zeek_cols][sfun]}	%{[zeek_cols][nsb]}	%{[zeek_cols][type_name]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_serial_header"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_serial_header"
+        init => "$zeek_bsap_serial_header_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'ser', 'dadd', 'sadd', 'ctl', 'dfun', 'seq', 'sfun', 'nsb', 'type_name' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_serial_header_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_serial_header"
+      add_field => {
+        "[zeek_cols][proto]" => "serial"
+        "[zeek_cols][service]" => "bsap"
+      }
+    }
+
+  } else if ([source] == "bsap_serial_rdb") {
+    #############################################################################################################################
+    # bsap_serial_rdb.log
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_serial_rdb"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][func_code]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_serial_rdb"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_serial_rdb"
+        init => "$zeek_bsap_serial_rdb_field_names = [ 'ts', 'uid', 'func_code', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_serial_rdb_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_serial_rdb"
+      add_field => {
+        "[zeek_cols][proto]" => "serial"
+        "[zeek_cols][service]" => "bsap"
+      }
+    }
+
+  } else if ([source] == "bsap_serial_rdb_ext") {
+    #############################################################################################################################
+    # bsap_serial_rdb_ext.log
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_serial_rdb_ext"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][dfun]}	%{[zeek_cols][seq]}	%{[zeek_cols][sfun]}	%{[zeek_cols][nsb]}	%{[zeek_cols][extfun]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_serial_rdb_ext"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_serial_rdb_ext"
+        init => "$zeek_bsap_serial_rdb_ext_field_names = [ 'ts', 'uid', 'dfun', 'seq', 'sfun', 'nsb', 'extfun', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_serial_rdb_ext_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_serial_rdb_ext"
+      add_field => {
+        "[zeek_cols][proto]" => "serial"
+        "[zeek_cols][service]" => "bsap"
+      }
+    }
+
+  } else if ([source] == "bsap_serial_unknown") {
+    #############################################################################################################################
+    # bsap_serial_unknown.log (dropped for now, see above)
+    # https://github.com/idaholab/ICSNPP
+
+    dissect {
+      id => "dissect_zeek_bsap_serial_unknown"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_bsap_serial_unknown"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_bsap_serial_unknown"
+        init => "$zeek_bsap_serial_unknown_field_names = [ 'ts', 'uid', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_bsap_serial_unknown_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_bsap_serial_unknown"
+      add_field => {
+        "[zeek_cols][proto]" => "serial"
+        "[zeek_cols][service]" => "bsap"
       }
     }
 
