--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -10,6 +10,20 @@ filter {
       "[zeek_bacnet_discovery][range_high]" => "integer"
       "[zeek_bacnet_property][instance_number]" => "integer"
       "[zeek_bacnet_property][array_index]" => "integer"
+      "[zeek_bsap_ip_header][type_name]" => "integer"
+      "[zeek_bsap_ip_rdb][data_len]" => "integer"
+      "[zeek_bsap_ip_rdb][header_size]" => "integer"
+      "[zeek_bsap_ip_rdb][mes_seq]" => "integer"
+      "[zeek_bsap_ip_rdb][node_status]" => "integer"
+      "[zeek_bsap_ip_rdb][res_seq]" => "integer"
+      "[zeek_bsap_ip_rdb][sequence]" => "integer"
+      "[zeek_bsap_serial_header][ctl]" => "integer"
+      "[zeek_bsap_serial_header][dadd]" => "integer"
+      "[zeek_bsap_serial_header][nsb]" => "integer"
+      "[zeek_bsap_serial_header][sadd]" => "integer"
+      "[zeek_bsap_serial_header][seq]" => "integer"
+      "[zeek_bsap_serial_rdb_ext][nsb]" => "integer"
+      "[zeek_bsap_serial_rdb_ext][seq]" => "integer"
       "[zeek_cip][cip_sequence_count]" => "integer"
       "[zeek_cip_identity][device_type_id]" => "integer"
       "[zeek_cip_identity][encapsulation_version]" => "integer"
